@@ -34,6 +34,7 @@ function usage()
   echo "    -d DIR       include session directory"
   echo "    -g NAME      select session group NAME"
   echo "    -j INT       maximum number of parallel jobs (default 1)"
+  echo "    -k KEYWORD   check theory sources for conflicts with proposed keywords"
   echo "    -l           list session source files"
   echo "    -n           no build -- test dependencies only"
   echo "    -o OPTION    override Isabelle system OPTION (via NAME=VAL or NAME)"
@@ -68,13 +69,14 @@ CLEAN_BUILD=false
 declare -a INCLUDE_DIRS=()
 declare -a SESSION_GROUPS=()
 MAX_JOBS=1
+declare -a CHECK_KEYWORDS=()
 LIST_FILES=false
 NO_BUILD=false
 eval "declare -a BUILD_OPTIONS=($ISABELLE_BUILD_OPTIONS)"
 SYSTEM_MODE=false
 VERBOSE=false
 
-while getopts "D:Rabcd:g:j:lno:sv" OPT
+while getopts "D:Rabcd:g:j:k:lno:sv" OPT
 do
   case "$OPT" in
     D)
@@ -101,6 +103,9 @@ do
     j)
       check_number "$OPTARG"
       MAX_JOBS="$OPTARG"
+      ;;
+    k)
+      CHECK_KEYWORDS["${#CHECK_KEYWORDS[@]}"]="$OPTARG"
       ;;
     l)
       LIST_FILES="true"
@@ -145,7 +150,8 @@ declare -a JAVA_ARGS; eval "JAVA_ARGS=($ISABELLE_BUILD_JAVA_OPTIONS)"
   "$REQUIREMENTS" "$ALL_SESSIONS" "$BUILD_HEAP" "$CLEAN_BUILD" "$MAX_JOBS" \
   "$LIST_FILES" "$NO_BUILD" "$SYSTEM_MODE" "$VERBOSE" \
   "${INCLUDE_DIRS[@]}" $'\n' "${SELECT_DIRS[@]}" $'\n' \
-  "${SESSION_GROUPS[@]}" $'\n' "${BUILD_OPTIONS[@]}" $'\n' "$@"
+  "${SESSION_GROUPS[@]}" $'\n' "${CHECK_KEYWORDS[@]}" $'\n' \
+  "${BUILD_OPTIONS[@]}" $'\n' "$@"
 RC="$?"
 
 if [ "$NO_BUILD" = false -a "$VERBOSE" = true ]; then
